# dioxus-bool-attrs-bug

./: Cargo.toml  Dioxus.toml
docs/: index.html
docs/assets/dioxus/: dioxus-bool-attrs-bug.js  dioxus-bool-attrs-bug_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
src/: main.rs
